--- a/app/src/main/res/drawable/button_outline.xml
+++ b/app/src/main/res/drawable/button_outline.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:radius="4dp" />
-    <stroke
-        android:width="1dp"
-        android:color="#FFFFFF" />
-    <solid android:color="#00000000" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="#100F0F" />
+            <corners android:radius="30dp" />
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <stroke android:width="2dp" android:color="#100F0F" />
+            <solid android:color="@android:color/transparent" />
+            <corners android:radius="30dp" />
+        </shape>
+    </item>
+</selector>
