--- a/app/src/main/res/layout/activity_book_ride.xml
+++ b/app/src/main/res/layout/activity_book_ride.xml
@@ -1,28 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#100F0F">
+    android:background="#ffffff">
 
-    <!-- Google Map -->
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView"
+    <!-- Main Content Layer -->
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
-    <!-- Confirm Button -->
-    <Button
-        android:id="@+id/confirmButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Confirm Pickup and Drop-off"
-        android:textAllCaps="false"
-        android:background="@drawable/button_black"
-        android:textColor="@android:color/white"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="24dp"
-        android:paddingHorizontal="24dp"
-        android:paddingVertical="12dp"/>
-</RelativeLayout>
+        <!-- App Bar Toolbar -->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
+            android:background="#fff"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:elevation="4dp" />
+
+        <!-- Google Map View -->
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/mapView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar" />
+
+        <!-- Floating Panel for Pickup/Dropoff -->
+        <LinearLayout
+            android:id="@+id/inputPanel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:elevation="8dp"
+            android:background="@android:color/white"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="72dp"
+            android:backgroundTint="#ffffff">
+
+            <ImageView
+                android:id="@+id/logoImage"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ride_hub_logo_d"
+                android:contentDescription="Logo" />
+
+            <EditText
+                android:id="@+id/editTextPickup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Pickup Location"
+                android:backgroundTint="#ccc"
+                android:padding="12dp"
+                android:layout_marginTop="12dp"
+                android:textColor="#000" />
+
+            <EditText
+                android:id="@+id/editTextDropoff"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Drop-off Location"
+                android:backgroundTint="#ccc"
+                android:padding="12dp"
+                android:layout_marginTop="8dp"
+                android:textColor="#000" />
+
+            <RadioGroup
+                android:id="@+id/locationChoiceRadioGroup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp">
+
+                <RadioButton
+                    android:id="@+id/radio_type_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Type Location"
+                    android:textColor="#000" />
+
+                <RadioButton
+                    android:id="@+id/radio_map_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Choose from Map"
+                    android:textColor="#000"
+                    android:layout_marginStart="24dp" />
+            </RadioGroup>
+        </LinearLayout>
+
+        <!-- Confirm Button at the Bottom -->
+        <Button
+            android:id="@+id/confirmButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Confirm Pickup and Drop-off"
+            android:textAllCaps="false"
+            android:backgroundTint="#100F0F"
+            android:textColor="#ffffff"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="24dp"
+            android:paddingHorizontal="24dp"
+            android:paddingVertical="12dp" />
+    </RelativeLayout>
+
+    <!-- Navigation Drawer -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="280dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@android:color/white"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/drawer_menu" />
+</androidx.drawerlayout.widget.DrawerLayout>
