--- a/frontend/myridehub/src/Dashboard/DashboardPage.css
+++ b/frontend/myridehub/src/Dashboard/DashboardPage.css
@@ -10,7 +10,7 @@ html, body {
   height: auto;
   overflow-y: auto;
   font-family: 'Segoe UI', sans-serif;
-  background-color: #7a7b7b;
+  background-color: #303030;
 
 }
 
