--- a/frontend/myridehub/src/Rent/RentNow.css
+++ b/frontend/myridehub/src/Rent/RentNow.css
@@ -25,16 +25,6 @@
   color: #000;
 }
 
-.rent-box {
-  background-color: #f9f9f9;
-  padding: 2rem;
-  border-radius: 16px;
-  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  max-width: 1000px;
-  margin: 0 auto;
-}
-
 /* Back Button */
 .back-button {
   background: none;
@@ -78,12 +68,12 @@
 
 /* Form Container */
 .form-container {
-  background-color: #3d3d3d;
+  background-color: #767676;
   padding: 2rem;
   border-radius: 12px;
   width: 100%;
   max-width: 500px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 4px 12px rgba(8, 8, 8, 0.752);
   text-align: left;
 }
 
